refactor, fix getAuthorUrl bug